--- a/坦克大战/MainForm/MainForm/MainForm.csproj
+++ b/坦克大战/MainForm/MainForm/MainForm.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Boss.cs" />
     <Compile Include="Bullet.cs" />
+    <Compile Include="Controller.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
